# youtube-transcript-mcp

./: .gitignore  .mcp.json  .mcp.json.template  LICENSE  README.md  coverage.json  mkdocs.yml  pyproject.toml  transcript-sample.md
.claude/: .claudeignore  CLAUDE.md  README.md  manifest.json  settings.json
.claude/agents/: agent-content-enhancer-ext.md  agent-content-enhancer.md  architectural-reviewer-ext.md  architectural-reviewer.md  autobuild-coach.md  autobuild-player.md  build-validator-ext.md  build-validator.md  clarification-questioner.md  code-reviewer-ext.md  code-reviewer.md  complexity-evaluator-ext.md  complexity-evaluator.md  database-specialist-ext.md  database-specialist.md  debugging-specialist-ext.md  debugging-specialist.md  devops-specialist-ext.md  devops-specialist.md  git-workflow-manager-ext.md  git-workflow-manager.md  pattern-advisor-ext.md  pattern-advisor.md  security-specialist-ext.md  security-specialist.md  task-manager-ext.md  task-manager.md  test-orchestrator-ext.md  test-orchestrator.md  test-verifier-ext.md  test-verifier.md
.claude/commands/: yt-insights.md
.claude/reviews/: TASK-DOC-FCD8-review-report.md  TASK-REV-7D5B-review-report.md
.claude/rules/: config.md  docker.md  mcp-patterns.md  security.md  testing.md
.claude/task-plans/: TASK-CLI-001-implementation-plan.md  TASK-CLI-002-implementation-plan.md  TASK-CLI-003-implementation-plan.md  TASK-CLI-004-implementation-plan.md  TASK-INT-001-implementation-plan.md  TASK-INT-002-implementation-plan.md  TASK-INT-003-implementation-plan.md  TASK-INT-004-implementation-plan.md  TASK-SKEL-002-implementation-plan.md  TASK-SKEL-003-implementation-plan.md  TASK-TRS-002-implementation-plan.md  TASK-TRS-003-implementation-plan.md  TASK-TRS-004-implementation-plan.md  TASK-VID-002-implementation-plan.md  TASK-VID-003-implementation-plan.md  TASK-VID-004-implementation-plan.md
.github/workflows/: docs.yml  publish.yml
.guardkit/: bootstrap_state.json  graphiti.yaml
.guardkit/features/: FEAT-2AAA.yaml  FEAT-6CE9.yaml  FEAT-6F80.yaml  FEAT-87A6.yaml  FEAT-SKEL-001.yaml
docs/: IMPLEMENTATION-PLAN.md  index.md  troubleshooting.md
docs/adr/: 0001-adopt-agentic-flow.md
docs/cli/: commands.md  examples.md  index.md
docs/development/: architecture.md  contributing.md  index.md  mcp_setup.md
docs/features/: FEAT-CLI-001-cli-wrapper.md  FEAT-INT-001-insight-extraction.md  FEAT-SKEL-001-basic-mcp-server.md  FEAT-SKEL-002-video-info-tool.md  FEAT-SKEL-003-transcript-tool.md  README.md
docs/focus-areas/: custom.md  index.md  presets.md
docs/getting-started/: claude-code.md  configuration.md  index.md  installation.md  quickstart.md
docs/research/: GRAPHITI-KNOWLEDGE.md  autobuild_commands.md  feature-plan-snippets.md  implementation-research.md  youtube-mcp-implementation-research.md
docs/state/: current-sprint.md
docs/tools/: extract-insights.md  get-transcript.md  index.md  list-focus-areas.md  list-transcripts.md
src/: __init__.py  __main__.py  cli.py
src/models/: insight.py
src/services/: __init__.py  insight_extractor.py  transcript_client.py  youtube_client.py
tasks/backlog/: TASK-CLI-002-update-main-entry-point.md  TASK-CLI-003-create-unit-tests.md  TASK-CLI-ADAPTER-SPE-87DED69B.md  TASK-DOC-FCD8-generate-mkdocs-documentation.md  TASK-FASTMCP-SPECIAL-B2B5577C.md  TASK-FASTMCP-TESTING-F3F7E392.md  TASK-INSIGHT-EXTRACT-E8FA2141.md  TASK-INT-002-implement-extraction-service.md  TASK-INT-005-verify-quality-gates.md  TASK-PROXY-AND-RATE--8913ADD0.md  TASK-PYDANTIC-DOMAIN-E67A24A4.md  TASK-REV-7005-plan-feat-skel-002-video-info-tool.md  TASK-REV-7D5B-review-autobuild-effectiveness.md  TASK-REV-87CD-plan-basic-fastmcp-server.md  TASK-REV-9AD6-plan-feat-skel-003-transcript-tools.md  TASK-REV-A1B2-enhance-feature-specs.md  TASK-REV-A880-plan-feat-int-001-insight-extraction.md  TASK-REV-E5FC-plan-feat-cli-001-cli-wrapper.md  TASK-SKEL-003-unit-and-protocol-tests.md  TASK-TRS-002-create-transcript-client-service.md  TASK-TRS-005-verify-quality-checks.md  TASK-VID-001-add-ytdlp-dependency.md  TASK-VID-002-create-youtube-client-service.md  TASK-VID-003-register-get-video-info-tool.md  TASK-VID-004-create-unit-tests.md  TASK-VID-005-verify-mcp-inspector-linting.md  TASK-YOUTUBE-TRANSCR-0893FDA8.md
tasks/design_approved/: TASK-CLI-001-create-cli-module.md  TASK-CLI-002-update-main-entry-point.md  TASK-CLI-003-create-unit-tests.md  TASK-CLI-004-create-integration-tests.md  TASK-INT-001-create-pydantic-models.md  TASK-INT-002-implement-extraction-service.md  (+10 more)
tests/: conftest.py  test_cli.py  test_dependencies.py  test_dependency.py  test_get_video_info_tool.py  test_main_mode_switching.py  test_mcp_inspector.py  test_mcp_inspector_verification.py  test_transcript_client.py  test_transcript_tools.py  test_youtube_client.py
youtube_insights_mcp/: __main__.py  cli.py
(+294 files in other folders)
