[project]
name = "youtube-insights-mcp"
version = "0.1.2"
description = "MCP server for YouTube transcript extraction and insight analysis"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Richard Woollcott", email = "rich@appmilla.com"},
]
readme = "README.md"
keywords = ["mcp", "youtube", "transcript", "insights", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "yt-dlp>=2024.1.0",
    "youtube-transcript-api>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/appmilla/youtube-transcript-mcp"
Repository = "https://github.com/appmilla/youtube-transcript-mcp"
Issues = "https://github.com/appmilla/youtube-transcript-mcp/issues"

[project.scripts]
youtube-insights-mcp = "youtube_insights_mcp.__main__:_entry_point"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_insights_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring network access (run with '-m integration')",
    "seam: marks seam tests verifying cross-module contracts",
    "integration_contract: marks integration contract tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "youtube_transcript_api.*"
ignore_missing_imports = true
